[gd_scene load_steps=25 format=3 uid="uid://cx511hdhtnbv2"]

[ext_resource type="Script" uid="uid://ceftwxcfqbqh0" path="res://scripts/title.gd" id="1_yql1r"]
[ext_resource type="Texture2D" uid="uid://ddrd1qnbvwyme" path="res://gfx/title/background_sky2.png" id="8_81wt4"]
[ext_resource type="FontFile" uid="uid://dh8vtie46ogmc" path="res://fonts/8-bit Arcade In.ttf" id="9_w65of"]
[ext_resource type="Texture2D" uid="uid://c7822n53fiq5n" path="res://gfx/title/background_wall_contour.png" id="10_81wt4"]
[ext_resource type="Texture2D" uid="uid://r6jdua6x0qce" path="res://gfx/title/pyropop_title.png" id="11_6civk"]
[ext_resource type="Texture2D" uid="uid://bp0b5c11ei16b" path="res://gfx/title/background_mountains.png" id="11_81wt4"]
[ext_resource type="Texture2D" uid="uid://cgr2gqu8o5joi" path="res://gfx/ui/Complete_UI_Essential_Pack_Free/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat_Animated.png" id="15_kcc3o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pmcd8"]
atlas = ExtResource("15_kcc3o")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e75f2"]
atlas = ExtResource("15_kcc3o")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtvjo"]
atlas = ExtResource("15_kcc3o")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8o15"]
atlas = ExtResource("15_kcc3o")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_opmo2"]
atlas = ExtResource("15_kcc3o")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owywo"]
atlas = ExtResource("15_kcc3o")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4fnx"]
atlas = ExtResource("15_kcc3o")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_75bkb"]
atlas = ExtResource("15_kcc3o")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgg5c"]
atlas = ExtResource("15_kcc3o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1qkb"]
atlas = ExtResource("15_kcc3o")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2as01"]
atlas = ExtResource("15_kcc3o")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq6fq"]
atlas = ExtResource("15_kcc3o")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg5ff"]
atlas = ExtResource("15_kcc3o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_52c44"]
atlas = ExtResource("15_kcc3o")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqt7r"]
atlas = ExtResource("15_kcc3o")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv6bm"]
atlas = ExtResource("15_kcc3o")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_opmo2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmcd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e75f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtvjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8o15")
}],
"loop": true,
"name": &"bottom_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opmo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owywo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4fnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75bkb")
}],
"loop": true,
"name": &"bottom_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgg5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1qkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2as01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq6fq")
}],
"loop": true,
"name": &"top_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg5ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52c44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqt7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv6bm")
}],
"loop": true,
"name": &"top_right",
"speed": 5.0
}]

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_yql1r")

[node name="MenuButtons" type="VBoxContainer" parent="."]
z_index = 100
offset_left = 205.0
offset_top = 9.0
offset_right = 305.0
offset_bottom = 115.0
theme_override_constants/separation = 10

[node name="P1vsCPUButton" type="Button" parent="MenuButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../P1vsP2Button")
focus_next = NodePath("../P1vsP2Button")
focus_previous = NodePath("../ExitButton")
theme_override_fonts/font = ExtResource("9_w65of")
text = "P1 vs CPU"

[node name="P1vsP2Button" type="Button" parent="MenuButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../P1vsCPUButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../P1vsCPUButton")
theme_override_fonts/font = ExtResource("9_w65of")
text = "P1 vs P2"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../P1vsP2Button")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../P1vsP2Button")
theme_override_fonts/font = ExtResource("9_w65of")
text = "Settings"

[node name="ExitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../P1vsCPUButton")
focus_next = NodePath("../P1vsCPUButton")
focus_previous = NodePath("../SettingsButton")
theme_override_fonts/font = ExtResource("9_w65of")
text = "Exit"

[node name="BackgroundSky" type="Sprite2D" parent="."]
z_index = -100
texture = ExtResource("8_81wt4")
centered = false

[node name="BackgroundMountains" type="Sprite2D" parent="."]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
z_index = -50
position = Vector2(0, -200)
texture = ExtResource("11_81wt4")
centered = false

[node name="BackgroundWall" type="Sprite2D" parent="."]
modulate = Color(0.501407, 0.501406, 0.501406, 1)
position = Vector2(0, -10)
texture = ExtResource("10_81wt4")
centered = false

[node name="PyropopTitle" type="Sprite2D" parent="."]
position = Vector2(81, 62)
texture = ExtResource("11_6civk")

[node name="Selection" type="Node2D" parent="."]
z_index = 100
position = Vector2(205, 9)

[node name="corner_top_left" type="AnimatedSprite2D" parent="Selection"]
position = Vector2(3, 1)
sprite_frames = SubResource("SpriteFrames_opmo2")
animation = &"top_left"
autoplay = "top_left"

[node name="corner_top_right" type="AnimatedSprite2D" parent="Selection"]
position = Vector2(97, 1)
sprite_frames = SubResource("SpriteFrames_opmo2")
animation = &"top_right"
autoplay = "top_right"

[node name="corner_bottom_left" type="AnimatedSprite2D" parent="Selection"]
position = Vector2(3, 18)
sprite_frames = SubResource("SpriteFrames_opmo2")
animation = &"bottom_left"
autoplay = "bottom_left"

[node name="corner_bottom_right" type="AnimatedSprite2D" parent="Selection"]
position = Vector2(97, 18)
sprite_frames = SubResource("SpriteFrames_opmo2")
animation = &"bottom_right"
autoplay = "bottom_right"
